src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Disqualified_Reason__c</fullName>
        <description>The reason that the lead has been disqualified</description>
        <inlineHelpText>The reason that the lead has been disqualified</inlineHelpText>
        <label>Disqualified Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Under 18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will not Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hangs up continuously</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Bounces &amp; Phone Unreachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wanted FX/CFDs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not register</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>apartment__c</fullName>
        <label>Apartment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>house__c</fullName>
        <description>House number/name</description>
        <label>House</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ip_address__c</fullName>
        <label>IP Address</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ip_city__c</fullName>
        <label>City IP</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ip_country__c</fullName>
        <label>Country IP</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ip_region__c</fullName>
        <label>Region IP</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_us_citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>United States Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nationality__c</fullName>
        <label>Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>not_working_in_us_finance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Working In Us Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>second_phone__c</fullName>
        <label>Second Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zip__c</fullName>
        <label>zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Leads</label>
        <sharedTo>
            <group>Sales</group>
            <group>Sales_Team</group>
            <role>MD</role>
            <role>Sales_Rep</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Arabic_Leads_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>username__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>verified__c</columns>
        <filterScope>Queue</filterScope>
        <label>Arabic Leads</label>
        <queue>Arabic_Leads</queue>
        <sharedTo>
            <role>MD</role>
            <role>Sales_Operations_Manager</role>
            <role>Sales_Rep</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Disqualified_Leads_Lead</fullName>
        <columns>username__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Disqualified_Reason__c</columns>
        <columns>IS_EMAIL_ADDRESS_BOUNCED</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Disqualified</value>
        </filters>
        <filters>
            <field>Disqualified_Reason__c</field>
            <operation>contains</operation>
            <value>Under 18,Will not Answer,Hangs up continuously,Language Barrier,Email Bounce</value>
        </filters>
        <label>Disqualified Leads</label>
        <queue>Disqualified_Leads</queue>
        <sharedTo>
            <role>MD</role>
            <role>Sales_Operations_Manager</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
        <sharedTo>
            <group>Sales</group>
            <group>Sales_Team</group>
            <role>MD</role>
            <role>Sales_Operations_Manager</role>
            <role>Sales_Rep</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>username__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Steveh</value>
        </filters>
        <label>My Open Leads</label>
        <sharedTo>
            <group>Sales</group>
            <group>Sales_Team</group>
            <role>MD</role>
            <role>Sales_Operations_Manager</role>
            <role>Sales_Rep</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Email_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>New Email  Leads</label>
        <queue>New_Email_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Qualified_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </filters>
        <label>Qualified Leads</label>
        <sharedTo>
            <group>Sales</group>
            <group>Sales_Team</group>
            <role>MD</role>
            <role>Sales_Operations_Manager</role>
            <role>Sales_Rep</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Registration_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Registration Leads</label>
        <queue>Registration_Leads</queue>
        <sharedTo>
            <role>MD</role>
            <role>Sales_Operations_Manager</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
        <sharedTo>
            <group>Sales</group>
            <group>Sales_Team</group>
            <role>MD</role>
            <role>Sales_Operations_Manager</role>
            <role>Sales_Rep</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UK_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>UK Leads</label>
        <queue>UK_Leads</queue>
        <sharedTo>
            <group>Sales</group>
            <group>Sales_Team</group>
            <role>MD</role>
            <role>Sales_Operations_Manager</role>
            <role>Sales_Rep</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>leads_in_progress</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>username__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Open,Disqualified</value>
        </filters>
        <label>leads in progress</label>
        <sharedTo>
            <group>Sales</group>
            <group>Sales_Team</group>
            <group>Support</group>
            <group>Support_Team</group>
            <role>MD</role>
            <role>Sales_Operations_Manager</role>
            <role>Sales_Rep</role>
            <role>Support_Operations_Manager</role>
            <role>Support_Rep</role>
            <role>VP_Sales_Support</role>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Qualified_Lead</fullName>
        <active>false</active>
        <description>Leads cant be qualified unless there are phone &amp; email history</description>
        <errorConditionFormula>AND
(  
ISPICKVAL(Status, &apos;qualified&apos;) ,
OR
(
ISBLANK(Email) ,
ISBLANK(Phone)
)
)</errorConditionFormula>
        <errorMessage>Lead cant be Qualified unless there is &quot;phone &amp; email&quot; contact</errorMessage>
    </validationRules>
</CustomObject>